--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "puppeteer": "^19.7.2"
+    "puppeteer": "^19.7.2",
+    "xlsx": "^0.18.5"
   }
 }
